OpenGL Driver losing connection with display using certain volumetric shader node configurations #43496

Closed
opened 2015-01-31 08:14:35 +01:00 by Duncan Freeman · 8 comments

System info: system-info.txt

When using the 'Tangent' On geometry connected to the color input of a volumetric shader (Node setup), it crashes the OpenGL driver.
Both monitors rebooted, and the display driver notified me that it had in fact rebooted.

Node Setup:
Geometry: Volume Absorbtion:

   Tanget -------> [     ]  Color

.Blend file and screenshot of the message given by my display driver:

Crash.png
Crash.blend

System info: [system-info.txt](https://archive.blender.org/developer/F140105/system-info.txt) When using the 'Tangent' On geometry connected to the color input of a volumetric shader (Node setup), it crashes the OpenGL driver. Both monitors rebooted, and the display driver notified me that it had in fact rebooted. Node Setup: Geometry: Volume Absorbtion: ``` Tanget -------> [ ] Color ``` .Blend file and screenshot of the message given by my display driver: ![Crash.png](https://archive.blender.org/developer/F140100/Crash.png) [Crash.blend](https://archive.blender.org/developer/F140099/Crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Masterchef365

Added subscriber: @Masterchef365
Sergey Sharybin self-assigned this 2015-01-31 09:40:26 +01:00

Please never attach system info as an inlined text since it makes report almost unreadable. Attach as the file instead.

The setup might be not totally trivial for GPU, so if you're not having dedicated GPU for rendering (and separate for the display) you'll run into time limit sooner or later. This is just how CUDA works. What's worse, that's also what windows restricts even further..

But i can see crash when rendering with CPU, so there is at least something to be looked into. Will investigate.

Please never attach system info as an inlined text since it makes report almost unreadable. Attach as the file instead. The setup might be not totally trivial for GPU, so if you're not having dedicated GPU for rendering (and separate for the display) you'll run into time limit sooner or later. This is just how CUDA works. What's worse, that's also what windows restricts even further.. But i can see crash when rendering with CPU, so there is at least something to be looked into. Will investigate.

Ok, had a closer look. You can't actually use tangent for the volume. Tangent is a surface property, not defined for the volume.

Will commit fix for the crash (and hopefully for the driver timeout) now, but the setup wouldn't give what you're expecting from it perhaps.

Ok, had a closer look. You can't actually use tangent for the volume. Tangent is a surface property, not defined for the volume. Will commit fix for the crash (and hopefully for the driver timeout) now, but the setup wouldn't give what you're expecting from it perhaps.

This issue was referenced by 03cb146afa

This issue was referenced by 03cb146afa812c95acf0da7f30b3282e71bffcf0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 03cb146afa.

Closed by commit 03cb146afa.

This issue was referenced by blender/cycles@4625d070bb

This issue was referenced by blender/cycles@4625d070bb5e77f16a87418fd6432ee8e9ce9a69
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43496
No description provided.